--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -6,16 +6,18 @@
 }
 .white-bg{
     background-color: white;
+    color: var(--primary-color);
 }
 
 .main-content{
     max-width: 120rem;
     margin: 0 auto;
-    padding: var(--gap);
+    padding: 8rem var(--gap);
 }
 
 .section{
     min-height: 100vh;
+    
 }
 
 .menu{
@@ -30,5 +32,61 @@
     align-items: center;
     padding-left: 10px;
     padding-right: 10px;
-   
+}
+
+.top3-content{ 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    height: 100vh; 
+    max-width: 65rem;
+    text-align: center;
+}
+
+.grid-one-content{
+    display: flex;
+    flex-flow: column wrap;  
+    justify-content: center;
+    min-height: 100vh;
+    margin-left: 2rem;    
+}
+.grid-two-content{
+    display: flex;
+    flex-flow: column wrap;  
+    justify-content: center;
+    min-height: 100vh;
+    margin-left: 2rem;   
+}
+
+.grid-main-heading{
+    margin-top: 1rem;
+}
+
+.grid-description{
+    padding-bottom: 5rem;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: var(--gap);
+    counter-reset: grid-counter;
+}
+
+.grid h3{
+    font-size: 4rem;
+    position: relative;
+    padding-left: 8rem;
+    padding-bottom: 2.5rem;
+}
+.grid h3::before{
+    counter-increment: grid-counter;
+    content: counter(grid-counter);
+    position: absolute;
+    font-size: 8rem;
+    font-style: italic;
+    top: -4rem;
+    left: 0;
+    transform: rotate(4deg);
 }
