--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -5,6 +5,7 @@
 
 html{
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -22,7 +23,10 @@ h1{
 }
 
 h2{
-    font-size: 5.5rem;
+    font-size: 7rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1.2;
 }
 
 h3{
@@ -43,4 +47,31 @@ h6{
 
 a{
     text-decoration: none;
+}
+
+p{
+    margin-bottom: 3.5rem;
+}
+
+table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table td, tble th{
+    padding: 0.5rem;
+    border: 0.1rem solid var(--light-gray-color);
+    text-align: left;
+}
+
+tfoot td {
+    background-color: var(--light-gray-color);
+    color: black;
+}
+
+table caption{
+    font-style: italic;
+    font-size: 1.6rem;
+    text-align: left;
+    margin-bottom: 1rem;
 }
