--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     gap: var(--gap);
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
     top: -6.5rem;
 }
@@ -12,15 +12,33 @@
     justify-content: center;
 }
 
-.intro-text-content h2{
-    font-size: 7rem;
-    margin-bottom: 5rem;
-    text-transform: uppercase;
-    line-height: 1.2;
-}
 
 .intro-img img{
     z-index: 1;
     max-width: 100%;
     height: auto;
+}
+
+.gallery-img{
+    width: 100%;
+    max-width: 36rem;
+    max-height: 36rem;
+    overflow: hidden;
+}
+
+.gallery-img img{
+    transition: all 300ms ease-in-out;
+}
+
+.gallery-img img:hover{
+    transform: translate(-3%, 3%) scale(1.2) rotate(3deg);
+}
+
+.grid-gallery-heading {
+    text-align: center;
+    margin-bottom:0.5rem ;
+}
+
+.grid-gallery-description{
+    text-align: center;
 }
