--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,251 @@
+:root{
+    --primary-color : #070643;
+    --white-color : #fff;
+    --light-gray-color : #eee;
+    --gap: 3rem;
+    --secundar-color: crimson;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+html{
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+}
+
+body{
+    font-family: "Lato", sans-serif;
+    font-size: 2.2rem;
+    line-height: 1.5;
+}
+
+h1 , h2 , h3 , h4 , h5 , h6{
+  font-family: "Inter", sans-serif;
+}
+
+h1{
+    font-size: 6rem;
+}
+
+h2{
+    font-size: 7rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1.2;
+}
+
+h3{
+    font-size: 5rem;
+}
+
+h4{
+    font-size: 4.5rem;
+}
+
+h5{
+    font-size: 4rem;
+}
+
+h6{
+    font-size: 3.5rem;
+}
+
+a{
+    text-decoration: none;
+}
+
+p{
+    margin-bottom: 3.5rem;
+}
+
+legend{
+    font-style: italic;
+    font-size: 1.6rem;
+    margin-bottom: 2rem;
+
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
+    min-width: 360px;
+}
+
+table td, tble th{
+    padding: 0.5rem;
+    border: 0.1rem solid var(--light-gray-color);
+    text-align: left;
+}
+
+tfoot td {
+    background-color: var(--light-gray-color);
+    color: black;
+}
+
+table caption{
+    font-style: italic;
+    font-size: 1.6rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+
+
+
+.menu ul{
+    list-style: none;
+    display: flex;
+}
+
+.menu ul li a {
+    display: block;
+    padding: 2rem;
+    position: relative;
+    
+}
+
+.menu-space{
+    height: 6.8rem;
+}
+
+.menu h1 {
+    font-size: 3.0rem;
+}
+
+.menu h1 a {
+    margin-left: 16px;
+    color: var(--primary-color);
+}
+
+.menu ul li a::after{
+    content: '';
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    width: 0%;
+    height: 0.2rem;
+    background-color: var(--secundar-color);
+    transition: all 300ms ease-in-out;
+}
+
+.menu ul li a:hover::after{
+    width: 50%;
+    left: 25%;
+}
+
+.menu{
+    z-index: 3;
+}
+
+.main-bg{
+    background-image: url('../img/main-bg.svg');
+    background-size: cover;
+    background-position: center center;
+    color: var(--white-color)
+}
+.white-bg{
+    background-color: white;
+    color: var(--primary-color);
+}
+
+.main-content{
+    max-width: 120rem;
+    margin: 0 auto;
+    padding: 8rem var(--gap);
+}
+
+.section{
+    min-height: 100vh;
+    
+}
+
+.menu{
+    position:fixed;
+    width: 100%;
+    border-bottom: 0.1rem solid var(--light-gray-color);
+}
+
+.menu-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.top3-content{ 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    height: 100vh; 
+    max-width: 65rem;
+    text-align: center;
+}
+
+.grid-one-content{
+    display: flex;
+    flex-flow: column wrap;  
+    justify-content: center;
+    min-height: 100vh;
+    margin-left: 2rem;    
+}
+.grid-two-content{
+    display: flex;
+    flex-flow: column wrap;  
+    justify-content: center;
+    min-height: 140vh;
+    margin-left: 2rem;   
+}
+
+.grid-main-heading{
+    margin-top: 1rem;
+}
+
+.grid-description{
+    padding-bottom: 5rem;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: var(--gap);
+    counter-reset: grid-counter;
+}
+
+.grid h3{
+    font-size: 4rem;
+    position: relative;
+    padding-left: 8rem;
+    padding-bottom: 2.5rem;
+}
+.grid h3::before{
+    counter-increment: grid-counter;
+    content: counter(grid-counter);
+    position: absolute;
+    font-size: 8rem;
+    font-style: italic;
+    top: -4rem;
+    left: 0;
+    transform: rotate(4deg);
+}
+
+.responsive-table{
+    overflow: hidden;
+    overflow-x: auto;
+}
+
 .intro-content{
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     gap: var(--gap);
     min-height: 100vh;
     position: relative;
-    top: -6.5rem;
+    /* top: -6.5rem; */
 }
 .intro-text-content, .intro-img{
     display: flex;
@@ -42,3 +283,51 @@
 .grid-gallery-description{
     text-align: center;
 }
+
+.contact-form{
+    grid-column:span 2;
+}
+
+.contact-form .form-grid{
+    border: none;
+    display: flex;
+    flex-direction: row ;
+    flex-wrap: wrap;
+    gap: var(--gap);
+}
+
+.form-group{
+    flex: 1 1 320px;
+}
+
+.form-group label{
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.form-group input, .form-group textarea{
+    border: none;
+    background-color: var(--light-gray-color);
+    padding: 1.5rem 2rem;
+    width: 100%;
+    font-size: 2rem;
+    outline: none;
+}
+.form-group input:focus, .form-group textarea:focus{
+    box-shadow: 0px 0px 8px 2px var(--secundar-color);
+}
+
+.form-group button{
+    border: 0.3rem solid var(--primary-color);
+    padding: 1.5rem 2rem;
+    font-size: 2rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.form-group button:hover{
+    border: 0.3rem solid var(--light-gray-color);
+    background-color: var(--white-color);
+}
+
+
