--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -139,6 +139,9 @@ table caption{
 
 .menu{
     z-index: 3;
+    position:fixed;
+    width: 100%;
+    border-bottom: 0.1rem solid var(--light-gray-color);
 }
 
 .main-bg{
@@ -163,11 +166,7 @@ table caption{
     
 }
 
-.menu{
-    position:fixed;
-    width: 100%;
-    border-bottom: 0.1rem solid var(--light-gray-color);
-}
+
 
 .menu-content{
     display: flex;
@@ -182,7 +181,7 @@ table caption{
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
-    height: 100vh; 
+    min-height: 100vh; 
     max-width: 65rem;
     text-align: center;
 }
@@ -328,6 +327,97 @@ table caption{
 .form-group button:hover{
     border: 0.3rem solid var(--light-gray-color);
     background-color: var(--white-color);
+}
+
+.close-menu{
+    display: none;
+}
+
+.back-to-top{
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    background-color: var(--white-color);
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: var(--primary-color);
+    border: 0.1rem solid var(--primary-color);
+}
+
+@media(max-width: 800px){
+    .grid{
+        grid-template-columns: 1fr;
+    }
+    .gallery-img{
+        max-width: 100%;
+        width: 100%;
+        max-height: 100%;
+    }
+    .gallery-img img {
+        width: 100%;
+    }
+
+    .menu{
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        text-align: center;
+    }
+
+    .menu-content{
+        height: 100vh;
+    }
+
+    .menu-content,.menu-content ul{
+        flex-direction: column;
+        
+        justify-content: center;
+    }
+
+    .menu{
+        display: none;
+    }
+
+    .close-menu{
+        position: fixed;
+        z-index: 4;
+        top: 0;
+        left: 0; 
+    }
+
+    .close-menu-label::after{
+        content: '☰';
+        position: fixed;
+        z-index: 4;
+        top: 2rem;
+        left: 1rem; 
+        background-color: var(--primary-color);
+        color: var(--white-color);
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 3rem;
+        height: 3rem;
+        text-align: center;
+        padding: 0.5rem;
+        cursor: pointer;
+    }
+    /*  */
+    .close-menu:checked~.menu{
+        display: block; 
+    }
+
+    .close-menu:checked~.close-menu-label::after{
+        content: '×';
+    }
+    .menu-space{
+        display: none;
+    }
 }
 
 
